<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_lightgreen_semitransparent"
        tools:context=".presentation.ui.intromain.MainFragment">


        <Button
            android:id="@+id/testNotifications_btn"
            android:layout_width="117dp"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:onClick="testNotification"
            android:text="All_notif"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/testTodayNotification_btn"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="276dp"
            android:onClick="testTodayNotification"
            android:text="today_notif"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="@+id/testNotifications_btn"
            app:layout_constraintTop_toBottomOf="@+id/testNotifications_btn" />

        <ImageView
            android:id="@+id/food_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.4"
            android:contentDescription="@string/background_image"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/food_background" />

        <ImageView
            android:id="@+id/help_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/app_title_img"
            app:layout_constraintTop_toBottomOf="@+id/app_title_img"
            app:srcCompat="@drawable/ic_help_white_24dp" />

        <ImageView
            android:id="@+id/settingsIcon_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings_icon"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/app_title_img"
            app:layout_constraintTop_toBottomOf="@+id/app_title_img"
            app:srcCompat="@drawable/ic_filter_vintage_white_24dp" />

        <ImageView
            android:id="@+id/app_title_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/title_2048_white" />

        <TextView
            android:id="@+id/newFoodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/app_name_subtitle"
            android:textAlignment="center"
            android:textColor="@color/light_white_semitransparent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_title_img" />

        <ImageView
            android:id="@+id/main_logo_left"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="84dp"
            android:contentDescription="@string/app_logo_left"
            app:layout_constraintBottom_toBottomOf="@+id/fridge_logo"
            app:layout_constraintEnd_toEndOf="@+id/fridge_logo"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fridge_logo"
            app:srcCompat="@drawable/main_logo_left" />


        <ImageView
            android:id="@+id/main_logo_right"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_marginStart="84dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_logo_right"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/fridge_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="@+id/fridge_logo"
            app:layout_constraintTop_toTopOf="@+id/fridge_logo"
            app:srcCompat="@drawable/main_logo_right" />


        <ImageView
            android:id="@+id/fridge_logo_white_background"
            android:layout_width="136dp"
            android:layout_height="114dp"
            android:contentDescription="@string/app_logo"
            app:layout_constraintBottom_toBottomOf="@+id/fridge_logo"
            app:layout_constraintEnd_toEndOf="@+id/fridge_logo"
            app:layout_constraintStart_toStartOf="@+id/fridge_logo"
            app:layout_constraintTop_toTopOf="@+id/fridge_logo"
            app:srcCompat="@drawable/fridge_background_white" />

        <ImageView
            android:id="@+id/fridge_logo"
            android:layout_width="118dp"
            android:layout_height="101dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_logo"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newFoodLabel"
            app:srcCompat="@drawable/fridge_background" />

        <TextView
            android:id="@+id/today_expiring_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_rect"
            android:fontFamily="@font/fredoka_one"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/main_list_title"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fridge_logo" />

        <!-- Empty view is only visible when the list has no items. -->
        <ImageView
            android:id="@+id/share_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/today_expiring_list_title"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/today_food_list_recycleView"
            app:layout_constraintTop_toTopOf="@+id/today_expiring_list_title"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_share_48" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/today_food_list_recycleView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_rect_light_grey_very_trasparent"
            android:contentDescription="food_expiring_today_main"

            app:layout_constraintBottom_toTopOf="@+id/ad_view"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/today_expiring_list_title">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/emptyListText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/no_food_todays"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/today_food_list_recycleView"
            app:layout_constraintEnd_toEndOf="@+id/today_food_list_recycleView"
            app:layout_constraintStart_toStartOf="@+id/today_food_list_recycleView"
            app:layout_constraintTop_toTopOf="@+id/today_food_list_recycleView" />


        <RelativeLayout
            android:id="@+id/bannerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/today_food_list_recycleView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />




        <!-- view for AdMob Banner Ad -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>